[package]
name = "wvg"
version = "0.1.0"
edition = "2021"
authors = ["WVG Parser Authors"]
description = "A Wireless Vector Graphics (WVG) parser and converter library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/acurisu/wvg"
keywords = ["wvg", "vector-graphics", "parser", "svg"]
categories = ["parsing", "graphics"]

[lib]
name = "wvg"
path = "src/lib.rs"

[[bin]]
name = "wvg"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
